Fix navbar horizontal scroll issue, add page padding

--- a/assets/scss/bulma/_navbar-override.scss
+++ b/assets/scss/bulma/_navbar-override.scss
@@ -1,4 +1,5 @@
 $navbar-height: 6rem;
+$navbar-padding-vertical:3rem;
 $navbar-background-color: config('colors.white');
 $navbar-item-hover-color: config('colors.indigo');
 $navbar-item-hover-background-color: transparent;
